# tydi

./: .gitignore  404.html  Cargo.toml  README.md  faq.html  index.html  print.html  references.html  searchindex.js  searchindex.json  spec.html  tydi.html
.github/: bors.toml  dependabot.yml
.github/workflows/: assets.yml  book.yml  coverage.yml  release.yml  rust.yml
book/: book.toml
book/src/: README.md  SUMMARY.md  references.md  spec.md  tydi.md
book/src/specification/: README.md  intro.md  logical.md  notation.md  physical.md  streamlet.md
book/src/tools/: README.md  compositors.md  generators.md
book/theme/: highlight.js
docs/: aliases.js  crates.js  search-index.js  settings.html  source-files.js
docs/implementors/log/: trait.Log.js
docs/implementors/structopt/: trait.StructOpt.js  trait.StructOptInternal.js
docs/src/tydi/: error.rs.html  lib.rs.html  logical.rs.html  physical.rs.html  traits.rs.html  util.rs.html
docs/tydi/: all.html  enum.Error.html  index.html  macro.cat!.html  macro.cat.html  sidebar-items.js  struct.Logger.html  struct.Name.html  struct.NonZeroReal.html  struct.PathName.html  struct.UniquelyNamedBuilder.html  trait.Document.html  trait.Identify.html  trait.Reverse.html  trait.Reversed.html  type.NonNegative.html  type.Positive.html  type.PositiveReal.html  type.Result.html
docs/tydi/design/: index.html  sidebar-items.js
docs/tydi/error/: enum.Error.html  type.Result.html
docs/tydi/generator/: index.html  sidebar-items.js  trait.GenerateProject.html
docs/tydi/logical/: enum.Direction.html  enum.LogicalSplitItem.html  enum.LogicalType.html  enum.PhysicalSplitItem.html  (+8 more)
specification/: index.html  intro.html  logical.html  notation.html  physical.html  streamlet.html
src/: SUMMARY.md  data.rs  error.rs  graph.rs  lib.rs  library.rs  logical.rs  main.rs  physical.rs  project.rs  stream.rs  streamlet.rs  traits.rs  util.rs
src/design/: implementation.rs  interface.rs  library.rs  mod.rs  param.rs  project.rs  streamlet.rs  typ.rs
src/generator/: common.rs  mod.rs  vhdl.rs
src/parser/: ast.rs  data.rs  logical.rs  mod.rs  nom.rs  river.rs  sdf.pest  streamlet.rs  transform.rs
src/phys/: mod.rs
src/river/: mod.rs
src/stdlib/: basic.rs  mod.rs
tests/: compositions.rs  vhdl.rs
tests/implementations/: composition_example.impl  spark_example.impl
tools/: compositors.html  generators.html  index.html
vhdl_constructs/: test_library_pkg.gen.vhd  wrapper_arch.vhd  wrapper_pkg.vhd
vhdl_constructs/fancy_wrapper_generated/: fancy_wrapper_generated.vhd  test_library.vhd
(+178 files in other folders)
