[package]
name = "tydi"
version = "0.0.0"
description = "An open specification for complex data structures over hardware streams"
authors = ["Johan Peltenburg", "Jeroen van Straten", "Matthijs Brobbel"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
documentation = "http://docs.rs/tydi/"
homepage = "https://abs-tudelft.github.io/tydi/"
repository = "https://github.com/abs-tudelft/tydi"

[[bin]]
name = "tydi"
required-features = ["cli"]

[features]
cli = ["structopt", "parser"]
default = ["generator", "parser"]
generator = []
parser = ["nom"]

[dependencies]
indexmap = "1.3"
structopt = { version = "0.3", optional = true, default-features = false }
nom = { version = "5", optional = true }

[dev-dependencies]
tempfile = "3"
