[package]
name = "tydi"
version = "0.0.7"
description = "An HDL code generation utility for components described using the Tydi open specification."
authors = ["Johan Peltenburg", "Jeroen van Straten", "Matthijs Brobbel"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
documentation = "http://docs.rs/tydi/"
homepage = "https://abs-tudelft.github.io/tydi/"
repository = "https://github.com/abs-tudelft/tydi"

[[bin]]
name = "tydi"
required-features = ["cli"]

[features]
cli = ["structopt", "parser"]
default = ["generator", "parser"]
generator = []
parser = ["nom"]

[dependencies]
log = "0.4"
colored = "2"
indexmap = "1"
structopt = { version = "0.3", optional = true, default-features = false }
nom = { version = "7", optional = true }
pest = "2.1.3"
pest_derive = "2.1.0"
failure = "0.1.5"
failure_derive = "0.1.5"
traitcast = "0.5.0"

[dev-dependencies]
tempfile = "3"
